added main company banner, first container, imgs

--- a/index.html
+++ b/index.html
@@ -7,17 +7,24 @@
   </head>
 
   <body>
-    <!--header-->
 
-    <header>
-       <div class="company">
-         <div class="banner">
-        <img src="resources/images/logo.png"/>
-        <span class="logo">Secret Agent Supply Inc.</span>
-      </div>
-    </div>
+    <!--header-->
+      <div class="company">
+        <div class="container">
+          <div class="banner">
+            <img src="./resources/images/logo.png"/>
+            <h4>Secret Agent Supply Inc.</h4>
+          </div>
+        </div>
+        <div class="subcontainer">
+        <div class="supporting">
+          <div class="headline">
+          <h4>NEW ARRIVAL</h4>
+          <h2>SPORT BIKES AND MOTORCYCLES</h2>
+         </div>
+         </div>
+     </div>
+
+
   </body>
   </html>
-
-
-  
