added nav bar with products no dropdown

--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
     <title>Secret Agent Supply Inc.</title>
     <link rel="stylesheet" href="resources/css/styles.css">
   </head>
-
-  <body>
-
-    <!--header-->
+<body>
+  <!--header-->
       <div class="company">
         <div class="container">
           <div class="banner">
-            <img src="./resources/images/logo.png"/>
+            <img src="resources/images/logo.png"/>
             <h4>Secret Agent Supply Inc.</h4>
           </div>
         </div>
@@ -25,6 +23,16 @@
          </div>
      </div>
 
-
+ <div class="main">
+    <nav>
+      <ul>
+        <li>Eyewear</li>
+        <li>Apparel</li>
+        <li>Gadgets</li>
+        <li>Vehicles</li>
+        <li>Classes</li>
+        <li>Contact</li>
+      </ul>
+    </nav>
   </body>
   </html>
