struggling with properties on all sections, revisions galore

--- a/index.html
+++ b/index.html
@@ -6,67 +6,68 @@
     <link rel="stylesheet" href="resources/css/styles.css">
   </head>
 <body>
-  <!--header-->
-     <div class="company">
-       <div class="container">
-         <div class="banner">
-           <img src="resources/images/logo.png"/>
-           <h4>Secret Agent Supply Inc.</h4>
-         </div>
-       </div>
-       <div class="subcontainer">
-       <div class="supporting">
-         <div class="headline">
+  <!--company header section with new arrival-->
+ <div class="company">
+   <div class="container">
+     <div class="banner">
+       <img src="resources/images/logo.png"/>
+       <h4>Secret Agent Supply Inc.</h4>
+     </div>
+   </div>
+   <div class="container2">
+     <div class="black-box">
+       <div class="headline">
          <h4>NEW ARRIVAL</h4>
          <h2>SPORT BIKES AND MOTORCYCLES</h2>
         </div>
-        </div>
-    </div>
-     <div class="main">
-   <nav>
-     <ul>
-       <li>Eyewear</li>
-       <li>Apparel</li>
+     </div>
+   </div>
+     </div><!--closing company-->
+
+<div class="main">
+  <nav>
+    <ul>
+      <li>Eyewear</li>
+      <li>Apparel</li>
        <li>Gadgets</li>
        <li>Vehicles</li>
        <li>Classes</li>
        <li>Contact</li>
-     </ul>
+    </ul>
    </nav>
-    <!--special product offer in grid format-->
+<!--special product offer in grid format-->
     <div class="offer">
-    <div class="grid">
-    <div class="cell">
-    <img src="resources/images/pen.png" alt="exploding pen"/>
-    <span class="description">Exploding Pen</span>
-    </div>
-    <div class="cell">
-    <img src="resources/images/watch.png" alt="watch"/>
-     <span class="description">Cellular Watch</span>
-    </div>
-    <div class="cell">
-    <img src="resources/images/glasses.png" alt="glasses"/>
-      <span class="description">Thermal Glasses</span>
-    </div>
-    </div>
-    </div>
+      <div class="grid">
+        <div class="cell">
+          <img src="resources/images/pen.png" alt="exploding pen"/>
+          <span class="description">Exploding Pen</span>
+        </div>
+        <div class="cell">
+          <img src="resources/images/watch.png" alt="watch"/>
+          <span class="description">Cellular Watch</span>
+        </div>
+        <div class="cell">
+          <img src="resources/images/glasses.png" alt="glasses"/>
+          <span class="description">Thermal Glasses</span>
+        </div>
       </div>
+    </div>
+</div>
     <!--business info-->
     <div class="info-container">
-     <div class="info-grid">
-      <div class="info-cell">
-      <p id="location">location</p>
-      <p>xxxx</p>
+      <div class="info-grid">
+        <div class="info-cell">
+          <p id="location">location</p>
+          <p>47.346436.84.32354</p>
+        </div>
+        <div class="info-cell">
+          <p id="hours">hours</p>
+          <p>0800-1800</p>
+        </div>
       </div>
-      <div class="info-cell">
-      <p id="hours">hours</p>
-      <p>xxxx</p>
-      </div>
-
-
-    </grid>
-
     </div>
+
+
 
 
 
