--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Secret Agent Supply Inc.</title>
     <link rel="stylesheet" href="resources/css/styles.css">
   </head>
@@ -22,7 +23,8 @@
         </div>
      </div>
    </div>
-     </div><!--closing company-->
+ </div>
+ <!--closing company-->
 
 <div class="main">
   <nav>
@@ -61,17 +63,15 @@
           <p>47.346436.84.32354</p>
         </div>
         <div class="info-cell">
+
           <p id="hours">hours</p>
           <p>0800-1800</p>
         </div>
       </div>
     </div>
-
-
-
-
-
-
-
+<!--footer-->
+<footer class="footer">
+  <p class="copyright">&copy; Secret Agent Supply Inc.</p>
+</footer>
   </body>
   </html>
