added media queries for 2 screens, tablet, phone

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
      </div>
    </div>
  </div>
- <!--closing company-->
+ <!--closing top container-->
 
 <div class="main">
   <nav>
@@ -35,20 +35,22 @@
        <li>Vehicles</li>
        <li>Classes</li>
        <li>Contact</li>
+       <li class="menu">Menu</li>
+</ul>
     </ul>
    </nav>
 <!--special product offer in grid format-->
     <div class="offer">
       <div class="grid">
-        <div class="cell">
+        <div class="cell1">
           <img src="resources/images/pen.png" alt="exploding pen"/>
           <span class="description">Exploding Pen</span>
         </div>
-        <div class="cell">
+        <div class="cell2">
           <img src="resources/images/watch.png" alt="watch"/>
           <span class="description">Cellular Watch</span>
         </div>
-        <div class="cell">
+        <div class="cell3">
           <img src="resources/images/glasses.png" alt="glasses"/>
           <span class="description">Thermal Glasses</span>
         </div>
